--- a/logman/logman.links.task.yml
+++ b/logman/logman.links.task.yml
@@ -1,7 +1,15 @@
-logman.watchdog_search_form:
+logman.ststistics:
+  route_name: logman.statistics_form
+  base_route: logman.statistics_form
+  title: 'Logman Statistics'
+  weight: 1
+logman.watchdog_search:
   route_name: logman.watchdog_search_form
+  base_route: logman.statistics_form
   title: 'Logman Watchdog Search'
-logman.apache_search_form:
+  weight: 2
+logman.apache_search:
   route_name: logman.apache_search_form
+  base_route: logman.statistics_form
   title: 'Logman Apache Log Search'
   weight: 3
